# metrics-workshop

./: README.md  docker-compose.yml  pyproject.toml
backend/: main.py
contrib/: README.md  blackbox-exporter.yml  dashboard.json  prometheus.yml
frontend/: main.py
model/: fruit.py  model.py
traffic/: main.py
utils/: cache.py  consumer.py  db.py  latency.py  producer.py  random.py
