[tool.poetry]
name = "metrics-workshop"
version = "0.1.0"
description = ""
authors = ["Patrick Marie <pm@mkz.me>"]
readme = "README.md"
packages = [
    { include = "model" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pika = "^1.3.2"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
valkey = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
